# Probe

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: CI.yml
core/: .gitattributes  Cargo.toml  package.json
core/src/: builder.rs  debugger.rs
crates/: Cargo.toml
crates/debugger/: Cargo.toml
crates/debugger/src/: builder.rs  debugger.rs  lib.rs
crates/source-parser/: Cargo.toml
crates/source-parser/src/: lib.rs
src/: extension.ts
