[workspace]
resolver = "3"
members = ["debugger"]

[workspace.dependencies]
anyhow = "1.0.98"
foundry-debugger = { git = "https://github.com/foundry-rs/foundry/", tag = "v1.1.0", default-features = false }

# [patch.crates-io]
# solar-ast = { git = "https://github.com/paradigmxyz/solar", tag = "v0.1.2" }
