[workspace]
resolver = "3"
members = ["debugger"]

[workspace.dependencies]
anyhow = "1.0.98"
foundry-debugger = { git = "https://github.com/foundry-rs/foundry/", tag = "v1.1.0", default-features = false }
foundry-compilers = { version = "0.14.0", default-features = false }
foundry-common = { git = "https://github.com/foundry-rs/foundry/", tag = "v1.1.0", default-features = false }
foundry-evm-traces = { git = "https://github.com/foundry-rs/foundry/", tag = "v1.1.0", default-features = false }
foundry-cli = { git = "https://github.com/foundry-rs/foundry/", tag = "v1.1.0", default-features = false }
forge = { git = "https://github.com/foundry-rs/foundry/", tag = "v1.1.0", default-features = false }
foundry-config ={ git = "https://github.com/foundry-rs/foundry/", tag = "v1.1.0", default-features = false } 
clap  = "4.5.38"
tokio = "1.45.0"                         # An event-driven, non-blocking I/O platform for writing asynchronous I/O backed applica…
revm-inspectors = "0.16.0"    # Revm inspector implementations
napi = "3.0.0-beta.2"   
napi-derive = "3.0.0-beta.2"
napi-build = "2.2.0" 

# patch for solar since solar-parse depends on ^0.1.2 but on 0.1.3 they made breaking change bruh
[patch.crates-io]
solar-ast = { git = "https://github.com/paradigmxyz/solar", tag = "v0.1.2" }
solar-data-structures = { git = "https://github.com/paradigmxyz/solar", tag = "v0.1.2" }
solar-interface = { git = "https://github.com/paradigmxyz/solar", tag = "v0.1.2" }
