[package]
name = "debugger"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
foundry-debugger = { workspace = true }
foundry-compilers = { workspace = true }
foundry-common = { workspace = true }
forge = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
foundry-cli = { workspace = true }
foundry-config = { workspace = true }
revm-inspectors = { workspace = true }
foundry-evm-traces = { workspace = true }
napi = { workspace = true, features = ["serde_json"] }
napi-derive = { workspace = true }

[lib]
crate-type = ["cdylib"]

[build-dependencies]
napi-build = { workspace = true }
